Enable silent sink suspension for WebAudio everywhere.

Previously this was only enabled on Android, but we've continued
to see issues with sites in the wild wasting power with a silent
audio context that they never suspend.

BUG=707462,732450
TEST=none

Change-Id: I3ceba194be8f98b7b0a7078476fb5f000d262198
Reviewed-on: https://chromium-review.googlesource.com/568817
Reviewed-by: Bruce Dawson <brucedawson@chromium.org>
Reviewed-by: Raymond Toy <rtoy@chromium.org>
Commit-Queue: Dale Curtis <dalecurtis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#486251}
Former-commit-id: 9eef9cf2ba172c7fc8416aa6b78c5c6a4c610a21